chore: resolved overlap issue with vitals buttons

--- a/ui/app/styles/registration.scss
+++ b/ui/app/styles/registration.scss
@@ -39,6 +39,8 @@
 
 //@import "common/noTouch";
 
-
+.abnormal-button{
+  margin-left: 40px;
+}
 
 
